--- a/bond1.ipynb
+++ b/bond1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORT/jIWl0RevFCrpRMNGE9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,15 +22,15 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tleitchColumbia/week7/blob/main/bond1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ZiyueLiu-zl3472/week7/blob/main/bond1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "IiGT7CHhiiID",
-        "outputId": "f3da10bf-e18b-49ac-d5b1-2d966a5c82fd",
+        "outputId": "6a313429-13c6-43d5-f600-a88d5adb110e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -41,9 +40,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.bond object at 0x7d6633058690>\n",
-            "2000000.0,0.03,0.04,10,\n",
-            "I'm James Bond\n"
+            "<__main__.bond object at 0x7807792f43d0>\n"
           ]
         }
       ],
@@ -60,8 +57,8 @@
         "        self.ytm = ytm\n",
         "        self.couponrate = couponrate\n",
         "        self.m = m\n",
-        "\n",
-        "# Look at the bond instance\n",
+        "#sellf means the particular instance\n",
+        "# Look at the bond instance, but do not have any methodology\n",
         "b1 = bond(2e6,.03,.04,10)\n",
         "b1\n",
         "\n",
@@ -79,7 +76,7 @@
         "        self.maturity = m\n",
         "    def __repr__(self):\n",
         "        return \"{},{},{},{},\".format(self.face,self.ytm,self.couponrate,self.maturity)\n",
-        "\n",
+        "#same definition but define repr(self) method - standard method or format of info and returns - formated what b2 look like into string form\n",
         "\n",
         "\n",
         "# Look at the bond instance\n",
@@ -99,6 +96,7 @@
         "        return \"{},{},{},{}\".format(self.face,self.ytm,self.couponrate,self.maturity)\n",
         "    def __str__(self):\n",
         "        return \"I'm James Bond\"\n",
+        "#str - similar to repr method but is a simplier way to print out of object\n",
         "\n",
         "b3 = bond(2e6,.03,.04,10)\n",
         "print(b3)\n"
