--- a/bond1.ipynb
+++ b/bond1.ipynb
@@ -57,7 +57,8 @@
         "        self.ytm = ytm\n",
         "        self.couponrate = couponrate\n",
         "        self.m = m\n",
-        "#sellf means the particular instance\n",
+        "#__x__ - means method\n",
+        "#self means the particular instance\n",
         "# Look at the bond instance, but do not have any methodology\n",
         "b1 = bond(2e6,.03,.04,10)\n",
         "b1\n",
