--- a/bond2.ipynb
+++ b/bond2.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyeTcufA2Jgf4QKNau4bv2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,25 +22,25 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tleitchColumbia/week7/blob/main/bond2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ZiyueLiu-zl3472/week7/blob/main/bond2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yYeLP5gXj3Yb",
-        "outputId": "0fa44343-9ed7-4c6d-b4ed-459ad1175be9"
+        "outputId": "846aecf4-b18f-4e4a-fa2b-4e7ce396bd62"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "7000000.0,0.02,0.034,6\n"
+            "7000000.0,0.297,0.286,8\n"
           ]
         }
       ],
@@ -70,12 +69,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b0455bab-76e1-45d6-d741-ca8f132b356d",
+        "outputId": "3d0b2176-b843-4324-bd6e-ae78e9779ce6",
         "id": "HdZ4A-dUmdIc"
       },
       "outputs": [
@@ -83,7 +82,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6000000.0,0.315,0.292,6\n",
+            "7000000.0,0.09,0.186,9\n",
             "2000000.0,100,0.03,0.04\n"
           ]
         }
@@ -106,12 +105,14 @@
         "        self.duration = 0\n",
         "    def __repr__(self):\n",
         "        return \"{},{},{},{}\".format(self.face,self.ytm,self.couponrate,self.m)\n",
+        "#generate a random bond\n",
         "    def Assign(self,face,couponrate,m,ytm,pmtperyear):\n",
         "        self.face = face\n",
         "        self.couponrate = couponrate\n",
         "        self.pmtperyear = pmtperyear\n",
         "        self.m = m\n",
         "        self.ytm = ytm\n",
+        "#create a function Assign - define a method that function on specific object\n",
         "\n",
         "b2 = bond()\n",
         "print(b2)\n",
@@ -124,12 +125,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a3556598-5817-4378-e68a-601cd6b88a68",
+        "outputId": "9cd9155c-6820-409b-8226-a8e18c3a67ad",
         "id": "YHmACGs2mdcU"
       },
       "outputs": [
@@ -137,8 +138,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "4000000.0,0.004,0.321,7,0,0\n",
             "0\n",
             "2170604.0567355165\n",
+            "0\n",
             "8.508690304459574\n"
           ]
         }
@@ -160,6 +163,8 @@
         "        self.m = round(np.random.uniform()*5+5)\n",
         "        self.price = 0\n",
         "        self.duration = 0\n",
+        "#need to then create functions to change the self.xxx in initial formula\n",
+        "#__init__ is always there, __repr__ is optional, methods without __ are the methods you defined\n",
         "    def __repr__(self):\n",
         "        return \"{},{},{},{},{},{}\".format(self.face,self.ytm,self.couponrate,self.m,round(self.price,2),round(self.duration,2))\n",
         "    def Assign(self,face,ytm,couponrate,m,pmtperyear):\n",
@@ -185,6 +190,7 @@
         "            B += B_i\n",
         "        B += face * pv\n",
         "        self.price = B\n",
+        "#create the function getPrice\n",
         "    def getDuration(self):\n",
         "        face = self.face\n",
         "        couponrate = self.couponrate\n",
@@ -205,14 +211,22 @@
         "        B += face * pv\n",
         "        Btime += face * pv * i\n",
         "        self.duration = Btime/B\n",
+        "#create the function getDuration\n",
         "\n",
         "b3 = bond()\n",
+        "print(b3)\n",
+        "#define to a random bond\n",
         "b3.Assign(2e6,.03,.04,10,1)\n",
         "print(b3.price)\n",
+        "#assign the bond - price is 0 because haven't called the method - default no value for price\n",
         "b3.getPrice()\n",
         "print(b3.price)\n",
+        "#apply the getPrice method to b3 object\n",
+        "print(b3.duration)\n",
+        "#haven't called the getDuration method - default no value\n",
         "b3.getDuration()\n",
-        "print(b3.duration)"
+        "print(b3.duration)\n",
+        "##apply the getDuration method to b3 object"
       ]
     },
     {
@@ -222,6 +236,7 @@
         "n = 5\n",
         "for i in range(n):\n",
         "    bonds.append(bond())\n",
+        "#create a list from 1-5 of bonds\n",
         "\n",
         "#%%\n",
         "for b in bonds:\n",
@@ -231,6 +246,7 @@
         "for b in bonds:\n",
         "    b.getPrice()\n",
         "    b.getDuration()\n",
+        "#bond ojects have getBond and getDuration methods\n",
         "\n",
         "#%%\n",
         "for b in bonds:\n",
@@ -247,34 +263,35 @@
         "        den += w_i\n",
         "    duration = num/den\n",
         "    return(duration)\n",
+        "#get portfolioDuration using duration weights/total weights\n",
         "\n",
         "#%%\n",
         "print(PortfolioDuration(bonds))\n"
       ],
       "metadata": {
         "id": "n45kCS93wYVz",
-        "outputId": "af04025a-2a18-4ee7-b926-176c216e7231",
+        "outputId": "9ff01fb3-4ee2-4adb-93df-98e981c08ea2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1000000.0,0.227,0.125,7,0,0\n",
-            "7000000.0,0.168,0.091,8,0,0\n",
-            "1000000.0,0.217,0.155,8,0,0\n",
-            "4000000.0,0.325,0.3,7,0,0\n",
-            "3000000.0,0.034,0.089,6,0,0\n",
-            "1000000.0,0.227,0.125,7,650410.41,8.61\n",
-            "7000000.0,0.168,0.091,8,4717934.84,5.54\n",
-            "1000000.0,0.217,0.155,8,773661.22,4.72\n",
-            "4000000.0,0.325,0.3,7,3729685.62,6.36\n",
-            "3000000.0,0.034,0.089,6,3888759.11,9.89\n",
-            "7.093065283011313\n"
+            "2000000.0,0.216,0.285,9,0,0\n",
+            "9000000.0,0.163,0.051,6,0,0\n",
+            "7000000.0,0.039,0.265,8,0,0\n",
+            "7000000.0,0.328,0.017,7,0,0\n",
+            "2000000.0,0.211,0.136,8,0,0\n",
+            "2000000.0,0.216,0.285,9,2538031.05,8.27\n",
+            "9000000.0,0.163,0.051,6,5315114.25,5.07\n",
+            "7000000.0,0.039,0.265,8,17695322.04,5.38\n",
+            "7000000.0,0.328,0.017,7,1273972.04,6.0\n",
+            "2000000.0,0.211,0.136,8,1442793.08,4.87\n",
+            "5.58208621050204\n"
           ]
         }
       ]
