--- a/bond2.ipynb
+++ b/bond2.ipynb
@@ -165,6 +165,7 @@
         "        self.duration = 0\n",
         "#need to then create functions to change the self.xxx in initial formula\n",
         "#__init__ is always there, __repr__ is optional, methods without __ are the methods you defined\n",
+        "#use unit test to maintain methods to make sure they don't get messed up\n",
         "    def __repr__(self):\n",
         "        return \"{},{},{},{},{},{}\".format(self.face,self.ytm,self.couponrate,self.m,round(self.price,2),round(self.duration,2))\n",
         "    def Assign(self,face,ytm,couponrate,m,pmtperyear):\n",
