--- a/bond2.ipynb
+++ b/bond2.ipynb
@@ -33,14 +33,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yYeLP5gXj3Yb",
-        "outputId": "846aecf4-b18f-4e4a-fa2b-4e7ce396bd62"
+        "outputId": "5b3ef380-ec0a-4428-c601-1da86995bf78"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "7000000.0,0.297,0.286,8\n"
+            "5000000.0,0.275,0.063,10\n"
           ]
         }
       ],
@@ -69,12 +69,23 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "b1.ytm=.03"
+      ],
+      "metadata": {
+        "id": "R2Kk4xNe06N7"
+      },
       "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3d0b2176-b843-4324-bd6e-ae78e9779ce6",
+        "outputId": "a093ea5c-afaf-44b9-a1ea-118a16f896ea",
         "id": "HdZ4A-dUmdIc"
       },
       "outputs": [
@@ -82,7 +93,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "7000000.0,0.09,0.186,9\n",
+            "8000000.0,0.22,0.138,6\n",
             "2000000.0,100,0.03,0.04\n"
           ]
         }
@@ -116,7 +127,7 @@
         "\n",
         "b2 = bond()\n",
         "print(b2)\n",
-        "b2.Assign(2e6,.03,.04,100,1)\n",
+        "b2.Assign(2e6,.03,.04,100,1) #assign new value into the bond\n",
         "print(b2)\n",
         "\n",
         "\n",
@@ -125,12 +136,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9cd9155c-6820-409b-8226-a8e18c3a67ad",
+        "outputId": "e67cd0b1-29c9-4d10-e995-c4c433d91889",
         "id": "YHmACGs2mdcU"
       },
       "outputs": [
@@ -138,7 +149,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4000000.0,0.004,0.321,7,0,0\n",
+            "6000000.0,0.048,0.053,7,0,0\n",
             "0\n",
             "2170604.0567355165\n",
             "0\n",
@@ -252,6 +263,7 @@
         "#%%\n",
         "for b in bonds:\n",
         "    print(b)\n",
+        "#append the price and duration to bonds\n",
         "\n",
         "#%%\n",
         "def PortfolioDuration(bonds):\n",
@@ -260,8 +272,8 @@
         "    for x in bonds:\n",
         "        D_i = x.duration\n",
         "        w_i = x.price\n",
-        "        num += D_i * w_i\n",
-        "        den += w_i\n",
+        "        num += D_i * w_i #sum of price*duration\n",
+        "        den += w_i #sum of all prices\n",
         "    duration = num/den\n",
         "    return(duration)\n",
         "#get portfolioDuration using duration weights/total weights\n",
@@ -271,28 +283,28 @@
       ],
       "metadata": {
         "id": "n45kCS93wYVz",
-        "outputId": "9ff01fb3-4ee2-4adb-93df-98e981c08ea2",
+        "outputId": "1c3f8137-a605-46e4-cd30-8f4edd67e930",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2000000.0,0.216,0.285,9,0,0\n",
-            "9000000.0,0.163,0.051,6,0,0\n",
-            "7000000.0,0.039,0.265,8,0,0\n",
-            "7000000.0,0.328,0.017,7,0,0\n",
-            "2000000.0,0.211,0.136,8,0,0\n",
-            "2000000.0,0.216,0.285,9,2538031.05,8.27\n",
-            "9000000.0,0.163,0.051,6,5315114.25,5.07\n",
-            "7000000.0,0.039,0.265,8,17695322.04,5.38\n",
-            "7000000.0,0.328,0.017,7,1273972.04,6.0\n",
-            "2000000.0,0.211,0.136,8,1442793.08,4.87\n",
-            "5.58208621050204\n"
+            "8000000.0,0.184,0.019,6,0,0\n",
+            "2000000.0,0.284,0.282,5,0,0\n",
+            "3000000.0,0.211,0.185,9,0,0\n",
+            "10000000.0,0.213,0.01,5,0,0\n",
+            "5000000.0,0.221,0.058,7,0,0\n",
+            "8000000.0,0.184,0.019,6,3321166.8,10.94\n",
+            "2000000.0,0.284,0.282,5,1989951.17,3.23\n",
+            "3000000.0,0.211,0.185,9,2691110.91,8.96\n",
+            "10000000.0,0.213,0.01,5,3933677.94,9.6\n",
+            "5000000.0,0.221,0.058,7,2162386.57,10.2\n",
+            "8.985710863203137\n"
           ]
         }
       ]
