--- a/bond2.ipynb
+++ b/bond2.ipynb
@@ -276,7 +276,7 @@
         "        den += w_i #sum of all prices\n",
         "    duration = num/den\n",
         "    return(duration)\n",
-        "#get portfolioDuration using duration weights/total weights\n",
+        "#get portfolioDuration using duration weights/total weights - price weighted average of duration of bond\n",
         "\n",
         "#%%\n",
         "print(PortfolioDuration(bonds))\n"
