--- a/bond2.ipynb
+++ b/bond2.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -47,7 +47,7 @@
       "source": [
         "\n",
         "import numpy as np\n",
-        "\n",
+        "# Numerical Python - a fundamental package for numerical and scientific computing in Python\n",
         "\n",
         "class bond:\n",
         "    def __init__(self):\n",
@@ -75,12 +75,12 @@
       "metadata": {
         "id": "R2Kk4xNe06N7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -288,7 +288,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
