--- a/qslr.ipynb
+++ b/qslr.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -203,7 +203,7 @@
         },
         "outputId": "113bfb3c-9bf8-42eb-ff94-1d7e61e9cf47"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
         "id": "m9EtFtrAMC-t",
         "outputId": "7e148f50-55e5-40c3-d5fc-3fdb446b7fea"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +572,7 @@
         "id": "B_qWE3uZNc7_",
         "outputId": "a737840e-a29e-4071-b86a-99061f08c7c6"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -863,6 +863,59 @@
           },
           "metadata": {},
           "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install rdatasets\n",
+        "from rdatasets import data\n",
+        "\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import statsmodels.api as sm\n",
+        "import pandas as pd\n",
+        "import statsmodels.formula.api as smf # This line imports the statsmodels.formula.api, making smf available\n",
+        "\n",
+        "# Load the 'cars' dataset\n",
+        "df_cars = data('cars')\n",
+        "\n",
+        "myFormula='speed~dist'\n",
+        "carFit = smf.ols(formula=myFormula, data=df_cars).fit()\n",
+        "fit1 = smf.ols('dist ~ speed', data=df_cars).fit()\n",
+        "fit0 = smf.ols('dist ~ speed + 0', data=df_cars).fit()  # no intercept\n",
+        "\n",
+        "# 3. Predict at speed = 10\n",
+        "y = fit1.predict({'speed': 10})[0]\n",
+        "z = fit0.predict({'speed': 10})[0]\n",
+        "\n",
+        "# 4. Compute difference\n",
+        "diff = y - z\n",
+        "print(\"y - z =\", round(diff, 4))"
+      ],
+      "metadata": {
+        "id": "0oyfE7BzjNNn",
+        "outputId": "fdbda4ba-7b65-42fd-9615-16e107370dd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: rdatasets in /usr/local/lib/python3.11/dist-packages (0.2.10)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from rdatasets) (2.2.2)\n",
+            "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas->rdatasets) (2.0.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas->rdatasets) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->rdatasets) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->rdatasets) (2025.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->rdatasets) (1.17.0)\n",
+            "y - z = -7.3463\n"
+          ]
         }
       ]
     }
